# test_agents

./: .gitignore  AGENTEX.MD  README.md  deepresearch.md  supabase_data_model_arch.md
migrations/: 001_new_data_model.sql  002_seed_test_case.sql  003_generate_embeddings.py  003_retrieval_eval_artifacts.sql  004_vehicle_subdelegation_test.sql  005_scope_mismatch_test.sql  TEST_DATA_GUIDE.md
poa_agents/: .gitignore  RAILWAY.md  README.md  SCHEMA.md  SETUP.md  SHARING_CHECKLIST.md  agents_plan.md  dev.sh  project_plan.md  verify-ready-to-share.sh
poa_agents/almeezan/: almeezan.py  fetch_for_supabase.py  fetch_poa_laws.py  json_to_csv.py  law_mappings.md  retry_failed_laws.py  test_law_9176.json
poa_agents/condenser_agent/: .env.example  Dockerfile  README.md  manifest.yaml  requirements.txt
poa_agents/docs/: traces_plan.md
poa_agents/frontend/: .env.example  Dockerfile  next.config.ts  package-lock.json  (+1 more)
poa_agents/tier1_validation_agent/: .env  Dockerfile  manifest.yaml  pyproject.toml
poa_agents/tier1_validation_agent/project/: __init__.py  acp.py  custom_activities.py  run_worker.py  schema.py  workflow.py
poa_agents/tier1_validation_agent/project/checks/: __init__.py  business_rules.py  cross_field_logic.py  document_matching.py  field_completeness.py  format_validation.py
search_agent/: AZURE_SETUP.md  Dockerfile  FILES_EXPLAINED.md  IMPLEMENTATION_PLAN.md  POA_AGENT_DESIGN.md  README.md  SAK_ASSISTANT_ARCHITECTURE.md  dev.ipynb  environments.yaml  manifest.yaml  pyproject.toml
search_agent/project/: acp.py  llm_client.py  search_client.py
(+67 files in other folders)
